--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,10 +9,12 @@ jobs:
             fail-fast: true
             matrix:
                 os: [ubuntu-latest]
-                php: [8.1, 8.0, 7.4]
-                laravel: [7.*, 8.*, 9.*, 10.*]
+                php: [8.3, 8.2, 8.1, 8.0, 7.4]
+                laravel: [7.*, 8.*, 9.*, 10.*, 11.*]
                 dependency-version: [prefer-stable]
                 include:
+                    -   laravel: 11.*
+                        testbench: 9.*
                     -   laravel: 10.*
                         testbench: 8.*
                     -   laravel: 9.*
@@ -24,12 +26,26 @@ jobs:
                 exclude:
                     -   laravel: 7.*
                         php: 8.1
+                    -   laravel: 7.*
+                        php: 8.2
+                    -   laravel: 7.*
+                        php: 8.3
+                    -   laravel: 8.*
+                        php: 8.2
+                    -   laravel: 8.*
+                        php: 8.3
                     -   laravel: 9.*
                         php: 7.4
                     -   laravel: 10.*
                         php: 7.4
                     -   laravel: 10.*
                         php: 8.0
+                    -   laravel: 11.*
+                        php: 7.4
+                    -   laravel: 11.*
+                        php: 8.0
+                    -   laravel: 11.*
+                        php: 8.1
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
