--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0 || ^8.1",
-        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0"
+        "php": "^7.4 || ^8.0 || ^8.1 || ^8.2 || ^8.3",
+        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
