--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,14 +15,19 @@ jobs:
                 include:
                     -   laravel: 11.*
                         testbench: 9.*
+                        phpunit: 10
                     -   laravel: 10.*
                         testbench: 8.*
+                        phpunit: 9
                     -   laravel: 9.*
                         testbench: 7.*
+                        phpunit: 9
                     -   laravel: 8.*
                         testbench: 6.*
+                        phpunit: 9
                     -   laravel: 7.*
                         testbench: 5.*
+                        phpunit: 9
                 exclude:
                     -   laravel: 7.*
                         php: 8.1
@@ -62,7 +67,7 @@ jobs:
 
             -   name: Install dependencies
                 run: |
-                    composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --dev --no-interaction --no-update
+                    composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "phpunit/phpunit:^${{ matrix.phpunit }}" --dev --no-interaction --no-update
                     composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
             -   name: Execute tests
